fix: added docker filepaths

--- a/container_setup/grafana/Dockerfile
+++ b/container_setup/grafana/Dockerfile
@@ -1,4 +1,4 @@
-FROM grafana/grafana
+FROM docker.io/grafana
 
 COPY datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
 COPY dashboards.yaml /etc/grafana/provisioning/dashboards/dashboards.yaml
