--- a/container_setup/traefik/Dockerfile
+++ b/container_setup/traefik/Dockerfile
@@ -1,4 +1,4 @@
-FROM traefik:v2.5
+FROM docker.io/traefik:v2.5
 
 # Configure Traefik here (entrypoints, middlewares, routers, etc.)
 COPY traefik-config.yaml /etc/traefik/traefik-config.yaml
