--- a/container_setup/alertmanager/Dockerfile
+++ b/container_setup/alertmanager/Dockerfile
@@ -1,3 +1,3 @@
 FROM docker.io/bitnami/alertmanager
 
-COPY alertmanager.yml /etc/alertmanager/alertmanager.yml
+COPY ./container_setup/alertmanager/alertmanager.yml /etc/alertmanager/alertmanager.yml
