--- a/container_setup/traefik/Dockerfile
+++ b/container_setup/traefik/Dockerfile
@@ -1,4 +1,4 @@
 FROM docker.io/traefik:v2.5
 
 # Configure Traefik here (entrypoints, middlewares, routers, etc.)
-COPY ./container_setup/traefik/traefik-config.yaml /etc/traefik/traefik-config.yaml
+COPY traefik-config.yaml /etc/traefik/traefik-config.yaml
