--- a/container_setup/traefik/Dockerfile
+++ b/container_setup/traefik/Dockerfile
@@ -1,5 +1,7 @@
 FROM docker.io/traefik:v2.5
 
+USER nonroot
+
 RUN sudo apt-get update && apt-get upgrade
 
 # Configure Traefik here (entrypoints, middlewares, routers, etc.)
