--- a/container_setup/grafana/Dockerfile
+++ b/container_setup/grafana/Dockerfile
@@ -3,10 +3,9 @@ FROM docker.io/grafana/grafana
 RUN apt-get update && apt-get upgrade -y
 
 USER nonroot
-
-COPY grafana.ini /etc/grafana/grafana.ini
-COPY datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
-COPY dashboards.yaml /etc/grafana/provisioning/dashboards/dashboards.yaml
+# COPY grafana.ini /etc/grafana/grafana.ini
+# COPY datasources.yaml /etc/grafana/provisioning/datasources/datasources.yaml
+# COPY dashboards.yaml /etc/grafana/provisioning/dashboards/dashboards.yaml
 
 HEALTHCHECK  --interval=5m --timeout=3s \
 CMD wget --no-verbose --tries=1 --spider http://localhost:3000 || exit 1
